--- a/source/_posts/操作系统大题强化.md
+++ b/source/_posts/操作系统大题强化.md
@@ -475,6 +475,236 @@ out：队头指针，出队前移
 
 ![](/img/4w5wv.png)
 
+### 读者写者问题
+
+#### 不同进程伪代码访问全局变量
+
+* 思路
+
+  * ①分析每行代码分别read和write哪些全局变量
+
+  * ②分析互斥关系
+
+    * 两两互斥的情况下，相当于对某一个缓冲区都需要互斥访问（类似于独立）
+
+    ![](/img/175627.jpg)
+
+    * 互斥关系分析除了看访问的情况还要看本质和实际情况
+
+### 经典的读者写者问题
+
+#### 读者优先
+
+![](/img/180811.jpg)
+
+* 如何看图说话？
+
+  * 写者先进入rw关卡，p（rw），得到锁之后直接写文件，writing
+
+    * 写完之后直接V操作，不用判断，v（rw）
+
+  * 读者进来，看到rw关卡前面有个分支，说明要进行分支判断
+
+    * 此时判断是不是第一个人，如果是第一个人，p（rw），读文件，如果不是，直接进入，读文件
+
+    ```c++
+    p(mutex);
+    	count++;
+    		if(count==1)
+    			p(rw);
+    v(mutex)
+    ```
+
+    * 出来之后，面临分支，如果里面还有读者，不用进行v操作，如果没有读者，进行一个v操作
+
+    ```c++
+    p(mutex);
+    	count--;
+    		if(count==0);
+    			v(rw);
+    v(mutex);
+    ```
+
+* 总体代码
+
+```c++
+semaphore rw=1;//用于保证读者和写者互斥地访问文件
+semaphore mutex=1;//用于保护更新count变量时的互斥
+int count=0;//用于记录当前的读者数量
+//写者进程
+writer(){
+    while(1){
+        p(rw);//互斥访问共享文件
+        	读文件;
+        v(rw);//释放共享文件
+    }
+}
+//读者进程
+reader(){
+    while(1){
+        p(mutex);//互斥访问count变量
+        	if(count==0)//当第一个读进程读共享文件时
+                	p(rw);//阻止写进程写
+        count++;//读者计数器+1
+        v(mutex);//释放互斥变量
+        读文件；
+        p(mutex);//互斥访问count变量
+        	count--;//读者计数器-1
+        	if(count==0)//当最后一个读进程读完共享文件
+                v(rw);//允许写进程写
+        v(mutex);//释放互斥变量count
+    }
+}
+```
+
+#### 读写公平
+
+![](/img/836.jpg)
+
+* 如何看图说话？
+  * 写者：
+    * 进来之后先p(w)，然后来到rw关卡，然后p(rw)，然后v(w)，读文件，读完V(rw)
+  * 读者：
+    * 进来之后先p(w)，然后捧到分支，判断是否有其他读者进程，有的话读文件，没有的话要p(rw)，然后V(w)
+    * 读完以后遇到分支，判断里面是否还有读者，如果有读者直接出去，没有读者V(rw)
+* 总体代码
+
+```c++
+semaphore mutex=1;//用于保护更新count变量时的互斥
+semaphore w=1;//用于实现读写公平
+semaphore rw=1;//用于保证读者和写者互斥地访问文件
+int count =0;//用于记录当前读者的数量
+
+//写者进程
+writer(){
+    while(1){
+        p(w);//在无写进程请求时进入
+        	p(rw);//互斥访问共享文件
+        		v(w);//恢复对共享文件的访问
+        写文件；
+            v(rw);//释放共享文件
+    }
+}
+
+//读者进程
+reader(){
+    while(1){
+        p(w);//在无写进程请求时进入
+        	p(mutex);//互斥访问count变量
+        		if(count==0)//当第一个读进程读共享文件时
+                    p(rw);//阻止写进程写
+        		count++;//读者计数器+1
+        	v(mutex);//释放互斥变量count
+        	v(w);//恢复对共享文件的访问
+        读文件;
+        p(mutex);//互斥访问count变量
+        	count--;//读者计数器-1
+        	if(count==0);//当最后一个读进程读完共享文件
+        		v(rw);//允许写进程写
+        v(mutex);//释放互斥变量count              
+    }
+}
+```
+
+
+
+#### 写者优先
+
+![](/img/80851.jpg)
+
+* 因为写者之间是互斥的，因此不能采用读者优先的方法在rw那里开小路，而是在最开始W处开小路，让写者不用排W，而是直接去rw处排队
+* 写者优先的实现：
+  * 读者和写者同时在w处排队，如果文件里面还有写者，那么写者不用排w，直接进去排rw，但是读者还是得排w，因为写者还锁着w，因此写者就比读者快一步进入rw排队逻辑
+* 总体逻辑
+
+```c++
+semaphore read =1;//互斥信号量，用于给读者“上锁”
+semaphore write =1;//互斥信号量，用于给写者“上锁”
+semaphore rmutex =1;//互斥信号量，实现对readCount的互斥访问
+semaphore wmutex =1;//互斥信号量，实现对writeCount的互斥访问
+int readCount =0,wirteCount =0;//读者、写者的数量
+
+//读者进程（在这个题例就是可以多人一起共用更衣室的队员们）
+Reader(){
+    while(true){
+        P(read);//每个读者到达时先对read上锁
+        P(rmutex);
+        	readCount++;
+        if(readCount==1) P(write);//第一个开始读的读者对写者上锁
+        V(rmutex);
+        V(read);//每个读者正式开始读之前对read解锁
+        读者读...;
+        P(rmutex);
+        	readCount--;
+        if(readCount==0) V(write);//最后一个读完的读者对写者解锁
+        V(rmutex);
+    }
+}
+
+//写者进程（在这个题目里，对应必须独享更衣室的教练们）
+Writer(){
+    while(true){
+        P(wmutex);
+        	writeCount++;
+        if(writeCount==1)P(read);//第一个到达的写者对读者上锁，这一步是实现“写优先”的关键
+        V(wmutex);
+        P(write);//每个写者开始写之前都要P(write)，保证写者之间互斥，同时也能保证若当前有读者正在读，那么写者等待
+        写者写..；
+        V(write);
+        P(wmutex);
+        	writeCount--;
+        if(writeCount==0)V(read);//最后一个写者写完之后，对读者解锁
+        V(mutex);
+    }
+}
+```
+
+##### 例
+
+![](/img/81035.jpg)
+
+```c++
+semaphore read =1;//互斥信号量，用于给读者“上锁”
+semaphore write =1;//互斥信号量，用于给写者“上锁”
+semaphore rmutex =1;//互斥信号量，实现对readCount的互斥访问
+semaphore wmutex =1;//互斥信号量，实现对writeCount的互斥访问
+int readCount =0,wirteCount =0;//读者、写者的数量
+
+//读者进程（在这个题例就是可以多人一起共用更衣室的队员们）
+Reader(){
+    while(true){
+        P(read);//每个读者到达时先对read上锁
+        P(rmutex);
+        	readCount++;
+        if(readCount==1) P(write);//第一个开始读的读者对写者上锁
+        V(rmutex);
+        V(read);//每个读者正式开始读之前对read解锁
+        读者读...;
+        P(rmutex);
+        	readCount--;
+        if(readCount==0) V(write);//最后一个读完的读者对写者解锁
+        V(rmutex);
+    }
+}
+
+//写者进程（在这个题目里，对应必须独享更衣室的教练们）
+Writer(){
+    while(true){
+        P(wmutex);
+        	writeCount++;
+        if(writeCount==1)P(read);//第一个到达的写者对读者上锁，这一步是实现“写优先”的关键
+        V(wmutex);
+        P(write);//每个写者开始写之前都要P(write)，保证写者之间互斥，同时也能保证若当前有读者正在读，那么写者等待
+        写者写..；
+        V(write);
+        P(wmutex);
+        	writeCount--;
+        if(writeCount==0)V(read);//最后一个写者写完之后，对读者解锁
+        V(mutex);
+    }
+}
+```
+
 ### PV操作带练
 
 ![](/img/wh.png)
@@ -744,11 +974,37 @@ reader(){
 
 * 进程的驻留集大小就是给某一进程分配了几个页框，比如说某个进程的页表有三个页表项也就是3个页，但是实际上物理空间只分配了2个页框，那么其页表中有效位最多有2个为1的。
 * 局部淘汰：只从给进程本身分配的页框当中选择一个淘汰出去
+  
   * 全局淘汰：可能从其他进程的页框当中选择一个淘汰出去
 * 页表始址寄存器里面保存的是物理地址
 * 进程切换开销：从一个进程切换到另一个进程的时候，意味着TLB里面的所有数据，所有缓存的数据都得作废，Cache里面的数据也要作废
+  
   * 同一进程不同线程的切换，TLB和Cache数据副本不会作废，所以切换代价比进程切换小
 * 数组在虚拟地址空间中的地址连续，在物理地址空间里面不一定连续
+
+### 时间计算
+
+* 注意区分地址转换和访存时间计算的区别
+  * 地址转换只要得到页框号就停止
+  * 访存时间=地址转换时间+内存访问的时间
+
+![](/img/200117.jpg)
+
+![](/img/200133.jpg)
+
+* 以上为不发生缺页时候的情况
+* 如果发生缺页，则
+  * 地址转换时间=查到最后一级页表的时间+缺页处理时间+TLB查询时间
+  * 内存访问时间=查到最后一级页表的时间+缺页处理时间+TLB查询时间+访存时间
+    * 因为TLB未命中的时候，查页表的同时会更新TLB
+    * 缺页的时候，调入页面的同时会更新页表和TLB 
+
+![](/img/200452.jpg)
+
+* 二级页表的情况下，一级页表是可能缺页的，因为一级页表的页目录项中，有效位是否为1取决于对应的二级页表有没有调入内存，此时需要先把二级页表调入内存，然后再查二级页表，如果二级页表缺页，再把对应的页调入内存
+  * 一级页表里面存储的是二级页表的页框号
+
+![](/img/201226.jpg)
 
 ### 总结
 
@@ -759,3 +1015,455 @@ reader(){
 * 两个进程共享操作系统的内核区，只要把两个进程虚拟地址的高地址部分映射到同一片物理页框里面即可
 * 共享内存，本质是就是操作系统修改两个进程的页表，让两个进程的页面（虚拟地址空间）映射到同一个页框（物理地址空间），让两个进程在同一个页框当中进行数据的读写
 
+## 文件管理
+
+* pdf保存：
+  * https://www.notion.so/PDF-219b5125721b8099b94af0afb47e035c?source=copy_link
+
+### 文件结构
+
+* 文件物理结构
+  * 连续分配
+  * 隐式链接分配
+  * 显式链接
+    * FAT文件分配表
+  * 索引分配
+* 文件逻辑结构
+  * 文件逻辑结构的第x个字节指明的是文件的逻辑地址
+* 文件系统会根据文件的物理结构，把文件的逻辑地址映射为这个文件实际存储的物理地址，这个映射过程跟文件系统文件的物理结构有关
+  * 然后文件系统把这个文件的数据从外存读入内存
+* 簇就是块，磁盘块是linux的说法
+* 每个磁盘分区里面，当对某一个分区进行格式化的时候，这个分区的文件系统就被建立了
+  * 文件系统的格式有很多种
+  * 一旦文件系统建立完之后，其实就确定了这个盘里面存储文件到底是使用什么样的物理结构
+    * UNIX的UFS文件系统，文件的物理结构就是索引分配，而且是混合索引分配
+    * FAT文件系统是微软在早期DOS系统里面配的，物理结构采用显示链接分配
+    * 因此理论上可以让每个盘在格式化的时候，建立不同的文件系统，比如C盘用ufs，D盘用FAT
+      * fat只能传4GB，一个4gb的u盘可以 格式化成fat
+* **文件系统确定，文件物理结构确定**
+  * **文件系统建立，根目录的信息也会被建立**
+    * 如果是ufs文件系统，此时索引节点会被放在外存的几个连续的磁盘块中
+  * **文件系统建立，inode结点集中存储的位置和根目录的存储位置也会被确定**
+  * **文件系统建立，硬盘/文件系统的空闲分区管理的数据结构也会在磁盘内部建立**
+    * eg：位示图
+
+### 操作系统引导（开机过程）
+
+![](/img/uygfvdcs.png)
+
+![](/img/025-06-22 145727.jpg)
+
+![](/img/025-06-22 145747.jpg)
+
+![](/img/150638.jpg)
+
+* 主存分为两个部分：**BIOS系统**集成在**主板**上，在**ROM**芯片里面，ROM上面就是RAM，**内存的物理地址PA指向了ROM+RAM两个部分**
+
+* **①**开机的时候CPU首先会去执行**ROM芯片当中的自举程序**
+
+* **②**自举程序会把**主引导记录（MBR）读入RAM，** **执行磁盘引导程序，扫描分区表**，检查电脑中有几个分区，找出系统盘。
+
+  * **物理磁盘**的第一个扇区就是MBR分区
+  * MBR包含**磁盘引导程序和分区表**
+
+* **③**找到系统盘之后，自举程序会把**系统盘中的第一个磁盘块（存储操作系统初始化引导程序）（PBR）**读入内存
+
+  * 每一个逻辑分区（如C、D、E、F）都有一个**PBR（分区引导记录扇区）**，也就是每个分区的第一个扇区，里面存放了该分区的引导程序
+  * 如果分区中有操作系统，PBR会包含操作系统的引导加载程序，所以在图4.20一个可能的文件系统布局中，磁盘分区第一个块明明应该是PBR但是却称为引导块
+
+* **④**读入内存后，**执行该磁盘块中的操作系统初始化引导程序**
+
+* **⑤**操作系统初始化引导程序的执行，会引导CPU去把**根目录的信息（inode结点）读入内存**
+
+* **⑥**有了根目录的信息（inode结点）就知道系统盘里面的内容，存储了哪些东西
+
+* **⑦**接着操作系统的初始化程序就可以**从根目录出发，去找到系统盘里面，操作系统开机所需要的文件，并逐一加载进内存**
+
+* MBR和PBR的关系：
+
+  * **MBR**是**磁盘的第一个扇区**，通常包含启动计算机所需要的引导程序。
+
+    **PBR**是**每个分区的第一个扇区**，它包含启动该分区操作系统所需的引导信息。
+
+  * **MBR**负责引导计算机启动，而**PBR**负责启动具体的分区操作系统。
+
+  * **MBR**包含的是**计算机启动代码**，而**PBR**是负责**分区操作系统的引导**。不同分区的PBR可以有所不同，尤其在**多操作系统的情况下，每个操作系统的PBR都是独立的**
+
+### UFS文件系统
+
+![](/img/faegr_04(1).png)
+
+![](/img/112040.jpg)
+
+* 文件物理结构：混合索引
+
+  * 目录文件由目录项（FCB文件控制块）组成，一个目录下面有几个文件就有几个目录项
+
+    * eg：上图root根目录里面应该包含3个目录项
+
+  * 索引分配会把文件的存储信息用索引表来表示，索引信息放到Inode当中
+
+    * 每一个目录项由文件名以及指向索引节点的指针构成
+    * ufs在磁盘当中专门用几个连续的磁盘块去存储这些Inode结点
+      * Inode结点实际上就是一个struct结构体，struct inode{};inode a[N]连续存放到外存某一个固定的磁盘块，那些索引节点的编号本质上就是数组下标
+        * 无论索引节点有没有被使用，当ufs文件系统被格式化的时候，就会在某一个磁盘块把所有的索引节点集中存储在其中
+        * 每一个索引节点的大小都是一致的
+        * inode结点里面包含索引信息、所有者、创建者、总块数、共享计数等信息
+          * 共享计数在硬链接中使用，说明几个FCB指向这个inode，比如当两个FCB指向同一个inode，那么该inode的共享计数为2
+
+  * inode和索引表的关系：
+
+    ![](/img/130102.jpg)
+
+    * 索引表是inode的一部分内容，inode除了储存索引表以外，还会存储一些其他信息比如所有者、创建时间、总块数、共享计数等
+
+  * **目录文件、目录项、索引表、索引结点之间的关系梳理**
+
+    * 目录文件由目录项组成
+    * 目录项记载了文件名和指向inode结点的指针
+    * inode结点包含索引表和一些说明信息
+
+  * 根目录**存储在固定的位置**，这样可以保证开机时，能够找到根目录，再从根目录出发找到其他信息
+
+    ![](/img/1423430127.jpg)
+
+    * 开机的时候需要去系统盘里面去找操作系统的引导程序
+
+      * 为了找到系统盘里面存储的东西，需要保证这个系统盘根目录的存储信息存储在一个固定的位置
+      * 比如名单表放在一个盒子里面，为了找到这个名单表，我得把盒子放在一个固定的位置
+      * 这样开机启动读取固定的块，就可以找到系统盘存储的信息
+
+    * **开机时，根目录的内容通常会被加载到内存，并一直常驻内存**
+
+    * 这个根目录有ABC三个目录下，当我想要访问A文件的时候，要去1号inode里面去找，把A文件的inode信息从磁盘读到内存里面，这样就可以在内存里面查看里面有什么数据
+
+      * 比如我想访问A文件的第5000个字节，因为一个磁盘块的大小是4KB，因此第5000个字节一定是在这个文件的第二个逻辑块上，而第二个逻辑块存储在第七个磁盘块这个位置。
+
+        ![](/img/2025-06-22 130958.jpg)
+
+        * 因此当我想要访问第5000个字节的时候，应该把七号磁盘块读入内存
+
+  * 文件数量的上限受到inode节点数量的影响
+
+    ![](/img/2025-06-22 131513.jpg)
+
+    * **inode区的大小不能更改，在给磁盘格式化的时候就已经确定，不可动态增加**，除非清空磁盘再次格式化
+
+  * inode区也是存储在固定位置
+
+    * 好处是想要去访问某一个文件的inode，就可以方便找到inode
+
+  * 位示图
+
+    ![](/img/32047.jpg)
+
+  * 引导块
+
+    ![](/img/025-06-22 132417.jpg)
+
+    * 开机的时候一定要从这段程序开始运行
+
+  * **如果我的操作系统安排在C盘，那么我的电脑如何找到这个开机需要运行的程序？**
+
+    ![](/img/uygfvdcs.png)
+
+    * **首先**，电脑通电之后会去找**ROM芯片里面的自举程序**，然后运行。自举程序的执行效果就是**会把安装了操作系统的这个盘（分区）的第一个磁盘块读到RAM（内存）**里面。第一个磁盘块里面保存的就是**操作系统的初始化程序**
+
+      ![](/img/025-06-22 132417.jpg)
+
+    * **之后**，**执行操作系统的这段初始化程序**。这段程序和文件格式是相匹配的，如果我是ufs文件系统，那么这个引导程序就会初始化为以ufs文件系统去开机的一段逻辑，而如果我是fat文件系统，那么这个引导程序，就基于fat文件系统去写开机需要做什么事情。
+
+    * **开机时引导操作系统初始化程序的初始化，是在格式化文件系统的时候确定的**，而由于**确定了文件系统，文件系统根目录在磁盘中的位置也就确定了，因此可以在操作系统初始化程序中去指明这个文件系统的根目录信息位置**。然后将根目录的inode结点（固定位置）从外存读到内存。
+
+      ![](/img/130102.jpg)
+
+    * 而C盘里面包含了操作系统初始化的更多信息，**只要找到根目录，就可以从根目录出发完成开机的一系列事情**。之后根据根目录inode内容，将**根目录的具体内容数据（索引表记载的盘块号，对应盘块号里面的内容）**加载到内存
+
+      ![](/img/1423430127.jpg)
+
+      * 接下来想要访问任何一个文件，只要告诉这个文件的存储路径，就可以从这个根目录出发，逐级往下找
+
+  * 超级块：用于快速找到空闲区
+
+    * 功能和位示图有一定重合性，但也是用于管理磁盘，当我们想要哦那个磁盘里面分配一些空闲块的时候，找到很多个空闲磁盘块，从超级块出发去找会比较方便
+
+    ![](/img/025-06-22 132417.jpg)
+
+#### 读某个文件的过程
+
+* **open的作用**：把文件的inode结点读入内存
+
+  **read的作用**：指明接下来访问的是文件的哪些字节，然后让操作系统从外存读入内存，操作系统是根据inode结点的信息去判断，要访问的这些字节到底存储在磁盘的哪个磁盘块中
+
+  **write的作用**：指明要写的是哪个文件（文件描述符），指明准备好的数据在哪个位置，写多少个字节，操作系统根据inode结点信息去判断要写的这些字节存储在磁盘的哪个磁盘块中
+
+  ```c++
+  write(fd,第二块,a[4096])
+  ```
+
+  
+
+* 首先要找到文件（open）
+  * 在根目录常驻主存的前提下，从根目录出发找到A中的Dm文件
+    * 从根目录下面找到名为A的目录项，然后将A对应的inode结点读入内存
+    * 根据inode信息找到A的目录文件，并读入内存
+      * 一个一个磁盘读入，读一个搜一个
+    * 发现Dm文件对应的目录项，得到dm文件对应的inode结点
+    * 把该inode结点从外存读入内存，之后想要访问这个文件的某个字节，存储在磁盘当中的哪个位置，就可以根据这个inode结点里面的索引表去找
+
+![](/img/151439.jpg)
+
+* 打开之后，操作系统会给我返回这个文件的文件描述符fd，接下来就可以根据fd去读fd指向的文件（read）
+
+  * 操作系统收到read调用以后，会把对应磁盘块从外存读入内存，然后操作系统会把这个磁盘块中的第0~1023个字符，从内核区复制到进程的用户区定义的buffer数组
+
+  ```c++
+  *fd=open("/A/Dm")
+  read(fd,0~1023,buffer);//char buffer[1024];
+  //文件描述符，读哪几个字符，存储到什么位置
+  ```
+
+* 把主要信息都进来之后，在操作系统的内部有两个数据结构，一个叫**系统打开文件表**，还有一个叫做**用户打开文件表**
+
+  * 文件描述符指向用户打开表的某一个表项
+    * 该表项指向系统打开表对应的文件的inode结点的内存指针
+      * 如果有两个进程打开同一个文件，那就两个用户打开表中有两个指向同一个系统打开表表项
+    * inode结点的内存指针指向内存中的inode结点
+
+  ![](/img/025-06-22 153435.jpg)
+
+  ![](/img/2025-06-22 153650.jpg)
+
+  * 用户打开文件表是每一个进程都有一个，包含在进程的PCB当中
+  * 系统打开表则是整个系统独一份
+
+#### 文件的逻辑结构和物理结构的映射关系
+
+![](/img/112040.jpg)
+
+* 假设这个文件B叫柯南.mp4，逻辑上看这个文件刚好占三个磁盘块大小，12kb，假设这个视频一共有3段，三段大小相等存储在3个块中，如果我要看这个视频，肯定要把b的这个文件的数据读入内存
+  * B在根目录下面，因为根目录常驻内存，就可以直接从根目录找到b这个文件
+  * b这个文件对应的inode是2号inode
+  * 在看这个视频之前我得open，所以看这个视频本质上就是read，我要把这个MP4文件read到内存里面，然后我的视频播放器这个进程，就会从内存里面获取这个视频的完整的数据，把文件转化为视频信息，然后通过I/O系统从扬声器和显示器播放，然后开始读第一个逻辑块，当想要播放中间，就要读入第二块
+    * 假设我只读入了一好快，此时我在视频播放器上点了快进到最后的一分钟，那么对于我的这个视频播放器用户进程而言，快进到最后一分钟，本质上就是我告诉操作系统，我想要去访问这个视频文件的第三个逻辑块
+      * 这个快进背后对应的就是read系统调用，会触发一个read系统调用告诉操作系统，把最后一分钟对应的数据读入内存
+        * 最后一分钟的数据，操作系统可以在内存当中已经读入的inode里面找到，然后读进内存
+      * 先open再read
+  * 要openb，先得找到b对应的inode，找到b对应的inode是二号，接下来把二号inode从外存读到内存
+  * 有了inode信息以后，就可以read它的任何一块的数据
+
+![](/img/2025-06-22 165654.jpg)
+
+![](/img/025-06-22 165713.jpg)
+
+![](/img/25-06-22 165733.jpg)
+
+![](/img/06-22 165804.jpg)
+
+* 应用程序或者说用户进程会根据文件的逻辑格式，去告诉操作系统想要访问的是这个文件的逻辑上的第几个块/第几个字节。
+  * 操作系统会把逻辑地址转化为物理地址，然后从外存当中把想要访问的数据读入内存
+
+##### 如何读z文件
+
+* open"/C/F/Z"
+
+  * **open的最终目标是找到目标文件的inode结点，并且把它的inode结点读入内存**
+
+  * ①从常驻内存的根目录出发，找到要读的c对应的目录项，找到C是对应inode7
+
+    ![](/img/181120.jpg)
+
+  * ②把inode7读入内存，然后根据7号inode结点的信息知道C的目录文件存储在9号块处
+
+    ![](/img/025-06-22 181244.jpg)
+
+  * ③读入九号块，查看C的具体内容，找到F
+
+    ![](/img/22 181416.jpg)
+
+    ![](/img/-06-22 181429.jpg)
+
+  * F对应4号inode，将4号inode读入内存
+
+    ![](/img/-06-22 181634.jpg)
+
+  * 从目录文件F对应的inode结点得知F的目录文件存储在14号块，读入14号块，读入14号块的本质是想看F下面存储了什么东西
+
+    ![](/img/025-06-22 181829.jpg)
+
+    ![](/img/181855.jpg)
+
+  * 发现Z对应的inode是13号，把13号inode读入内存
+
+    ![](/img/2104.jpg)
+
+    ![](/img/25-06-22 185905.jpg)
+
+    * 直接索引会指向前10个块，一级间接指向索引块，查一级索引表也要把对应的索引块读入内存，读入之后就能知道逻辑地址块对应的物理地址
+
+      ![](/img/5-06-22 185927.jpg)
+
+      * 也就是说指向1024个数据
+
+![](/img/-22 190148.jpg)
+
+![](/img/06-22 190416.jpg)
+
+![](/img/90713.jpg)
+
+* 间址指向的是索引块而不是inode
+
+![](/img/58.jpg)
+
+* 假设我找到z后要读取z的第6154个字，那么我得去二级间址找
+
+  ![](/img/5-06-22 190906.jpg)
+
+  * 该索引块包含1024个索引项
+
+    ![](/img/191336.jpg)
+
+    * 经过计算可知6154应该在下表为4的索引项对应的索引块那
+
+      ![](/img/1750.jpg)
+
+      ![](/img/25-06-22 191801.jpg)
+
+* 计算
+
+  ![](/img/23.jpg)
+
+  ![](/img/192155.jpg)
+
+  ![](/img/92355.jpg)
+
+### FAT文件系统
+
+![](/img/_05(1).png)
+
+* 刚开始的几个块和UFS系统有区别
+
+  * FAT文件系统在最开始**固定**了几个**连续的**块去存储FAT文件分配表
+
+    * FAT本质上是静态链表
+    * 开机的时候除了读入**根目录**，也要把**整个FAT表**读入并常驻内存
+
+    ![](/img/193819.jpg)
+
+  * 根目录也要存储在**固定**的位置
+
+    * 因为开机的时候得去固定的位置找根目录，然后把根目录的信息读入内存
+      * 如果根目录不止占一块，那么得去FAT表里面找读入的第一个根目录磁盘块的下一个块块号
+
+    ![](/img/193644.jpg)
+
+#### FAT如何访问一个文件
+
+![](/img/-22 194117.jpg)
+
+![](/img/201437.jpg)
+
+* FAT表的块号是隐含的，真正占据存储空间的是下一块块号，FAT表能指的范围，就是FAT表最多能容纳多少个表项
+
+* FAT表中-2表示空闲
+
+* 如何扩充一个文件：找到空闲盘块号，再找到该文件的最后一个盘块的指针，指向分配的空闲盘块
+
+  ![](/img/2202849.jpg)
+
+##### 访问B
+
+* ①读或写一个文件之前一定要open该文件
+
+  * 本质上是找齐控制信息然后存放到内存里面
+  * 由于b这个文件的文件目录项就是完整的控制信息，b对应的目录项里面包含了这个文件完整的控制信息
+
+  ![](/img/4251.jpg)
+
+  ![](/img/4420.jpg)
+
+* ②找到b文件的目录项，然后去将访问的块读入内存，比如要访问第三块，就去将第三块读入内存
+
+* ③从FAT表里面找到第三块的物理地址
+
+  * 从目录项里面得知起始块号是10，去FAT表里面找10，然后找到下一块块号12，然后继续找12，找到12的下一块块号8，则第三块是八号块
+
+* ④根据物理地址将对应磁盘块读入内存
+* 为什么显式链接能够实现随机访问？
+  
+  * 因为给出一个逻辑地址，操作系统总能根据FAT表推算出逻辑地址在外存中对应的磁盘块号
+
+##### 读写/A/Dm文件
+
+* ①根据文件路径，先取根目录找A
+* ②通过FAT文件表判断出A的块都在什么位置
+* ③A的各个块依次读入，看能不能找到，一个块不能找到就读下一个，直到找到完整的控制信息为止
+* ④根据控制信息找到Dm对应的块，去FAT表里面看Dm有几个块，将它们读入主存即可
+
+![](/img/240.jpg)
+
+##### 读写/C/F/Z文件
+
+* open z
+* read z
+* 都是先读入再检索，循环往复直到找到所需要的控制信息，得到起始地址，然后根据控制信息去FAT找物理地址
+* 因此**FAT文件存大文件效率低，但是读大文件的话inode读磁盘的次数比fat读磁盘的次数多**
+  * fat反复查FAT表（内存当中），就能找到物理地址，然后根据物理地址直接从磁盘中取出，只用读一次磁盘
+  * 而inode要不断索引跳转
+
+##### 习题带练
+
+![](/img/05255.jpg)
+
+![](/img/12000.jpg)
+
+### 梳理/补充
+
+* 索引方式下，读一个文件，首先去读该文件的**索引节点**所在的磁盘块，再读该文件内容（**数据**）所在的磁盘块（由索引节点得知）
+* 索引节点相同，说明指向同一个文件，并且是硬链接
+* 将某个文件读入内存的过程就是**找到该文件的FCB/inode**，然后**再读数据**的过程，分为两个部分进行计算得到最终需要存取几次磁盘
+* 减少读磁盘的次数会有两种解决思路
+  * fcb分解法
+    * 把文件名和文件信息分别存储，建立inode节点，目录项只保存文件名，及inode节点的指针信息，这样目录项的大小被缩短，找到目录项之后，再根据inode节点指针找到inode节点，而inode节点里就会包含文件的各种详细信息
+  * 设置当前目录
+    * 设置当前目录说明目录文件已经被放到内存里面了，意味着可以直接找到fcb，不用一级一级往下找
+
+## 磁盘计算
+
+### 相关物理量
+
+* t：每个柱面上的磁道数
+  * **相当于一个柱面共有几个磁头**，即多少个盘面
+* s：每个磁道上的扇区数
+  * 每个磁道的扇区数量都是一样的
+* i：柱面号
+  * 因为所有编号从0开始，所以i相当于实际经过的完整竹面数量，后续计算也是直接用i，如果编号从1开始，那么只算i-1个柱面数，后序物理量同理
+* j：当前所在柱面的磁头号
+  * 一个柱面有多个磁头，因为编号从0开始，实际上已经填满了该柱面前面的j个磁道
+* k：扇区号
+
+### 磁盘结构说明
+
+* 如图所示，假设一个磁道有100个扇区，由图可知，所有的磁道扇区数量是一样的，只不过内磁道的扇区弧段更短，外磁道的扇区弧段更长
+
+![](/img/bdf6eae69afc46bda835072aadc96a85.png)
+
+![](/img/1c5d991396734a319acff9bced68846a.png)
+
+* 因此磁盘的地址结构：柱面号，盘面号，扇区号是按照填入顺序形成的
+  * **先填满一个磁道的所有扇区，然后继续填满下一个同柱面的磁道，最后再移到另一个磁道**
+
+### 计算式解析
+
+* 如果要求柱面号i=2，磁头号j=4，扇区号k=10所对应的块号b
+  * 由图可知t=6，s=100（假设已知）
+* 系统存放信息时，并不是按照磁盘面上的磁道顺序存满一个磁盘后再存放下一个盘面，**而是按照柱面顺序存放，当同一柱面上的磁道存满后，再存放到下一个柱面上**
+* 所以当i=2，说明0号和1号磁道已经填满了，这两个柱面一共有i*t个磁道数加上自己当前的磁头号j（这里磁头号=磁道号）
+  * 总磁道数=j+i*t
+  * 经过的扇区数=s* (j+i*t)
+  * 总扇区数=经过的扇区数+自己当前的扇区号 k=k+s* （j+i *t）
+* 反过来求柱面号i，磁道号j和扇区号k
+  * 令d=s*t（s是每个磁道上的扇区数，t是每个柱面上的磁道数）
+  * i=b/d
+  * j=b%d/s
+  * k=b%d%s
