--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -43,7 +43,7 @@ math: true
   * CPU区分指令和数据的依据是二者访问阶段的不同
 * 指令和数据用二进制表示
 * 指令由操作码（操作类型）和地址码（操作数据的地址）组成
-* 以运算器为中心
+* **以运算器为中心**
   * 输入/输出设备与存储器之间的数据传送通过运算器完成
     * 导致数据计算效率的降低
 
@@ -55,7 +55,7 @@ math: true
 
 ##### 特点
 
-* 以存储器为中心
+* **以存储器为中心**
 * CPU=运算器+控制器
 * 指令存放于控制器当中，由控制器来解析并且发出相应的控制信号
 * 注：辅存主要指机械硬盘固态硬盘等，不属于主机内容而属于I/O设备，例如我们手机里的APP平时储存在辅存里面，只有使用的时候才会把辅存里边的app相关的程序数据代码读到主存里边
