--- a/source/_posts/操作系统大题强化.md
+++ b/source/_posts/操作系统大题强化.md
@@ -1027,6 +1027,9 @@ reader(){
   * 隐式链接分配
   * 显式链接
     * FAT文件分配表
+      * 如果文件存储介质容量较小，则在文件操作是，可把整个FAT装入内存，从而可显著地提高检索的速度；而在整个文件卷中在设置一个备份FAT，则可较好地增加文件系统的可靠性。
+      * 但采用显示连接分配时，对较大文件的随机存取，需先在FAT中顺序查找许多盘块好号，故它不能支持高效的随机存取；如果文件存储介质容量较大，则FAT也需占用较大的存储空间，此时将整个FAT装入内存显然是不现实的，这会进一步影响到文件随机存取的效率
+      * 先改FAT表再删改数据
   * 索引分配
 * 文件逻辑结构
   * 文件逻辑结构的第x个字节指明的是文件的逻辑地址
