--- a/source/_posts/计网大题强化.md
+++ b/source/_posts/计网大题强化.md
@@ -279,7 +279,7 @@ index_img: /img/1920x1080 (41).jpg
 
     ![](/img/Q232C2.png)
 
-    ![](/img/5-06-25 141537.jpg)
+    ![](/img/buzhidaoweishenme.jpg)
 
     * **无线**通信当中，**无线局域网**使用
       * 手机和路由器
@@ -1508,6 +1508,10 @@ index_img: /img/1920x1080 (41).jpg
 
 ![](/img/C153V.png)
 
+![](/img/fbced7dc407e04cbcf90e97b4ded4030.png)
+
+![](/img/201533.jpg)
+
 #### 有链接的传输vs无连接的传输
 
 ![](/img/ZFQV.png)
@@ -1582,7 +1586,104 @@ index_img: /img/1920x1080 (41).jpg
   * 人脉王知道计算机学院的院长办公室以后，去问院长，院长说不知道，但是告诉了人脉王数字媒体系的系主任的办公室在哪（下一级域名服务器的地址）
   * 人脉王去找系主任，系主任知道，告诉了人脉王B的联系地址，人脉王获得答案，告诉我B的联系地址，并把结果记录在自己的缓存当中
 
+## 结课考试
 
+### 题目
+
+![](/img/32b5b.png)
+
+![](/img/65n3.png)
+
+![](/img/b4537n.png)
+
+![](/img/3v426nbv26.png)
+
+![](/img/0be48c6db25e_05.png)
+
+### 讲解
+
+#### 1
+
+![](/img/a6n3.png)
+
+![](/img/6m87n6b5vttrcex.png)
+
+* 假如我们把FTP服务器视作百度网盘，用户界面对应网盘界面
+  * 想要从网盘上下载文件，**首先得登录账号**
+    * 此时百度网盘会**在后台创建一个控制进程**，这个后台的控制进程会尝试**和百度网盘的服务器的控制进程TCP21端口建立TCP连接**
+      * **控制进程的TCP连接是持久的，只要不退出网盘就会保持连接**
+  * 然后账号和密码会通过TCP连接传到服务器，百度网盘服务器的控制进程会对账号密码进行验证，确定用户有权限访问的文件
+  * 假如我要上传一个文件，把文件拖进网盘，此时客户端的控制进程会通过已经建立好的TCP连接，告诉百度网盘的服务器要上传文件以及文件的相关信息，网盘服务器收到请求后，会通过控制进程去判断能否上传
+  * 如果控制进程认为可以上传，就会返回一个数据传送进程的端口号，然后客户端会在后台建立数据传送进程，然后和返回的端口号尝试建立TCP连接，连接建立之后就可以开始传送文件了
+    * **非持续，传完文件就断开TCP连接**
+  * 百度网盘服务器那边可以有多个数据传送进程并发执行（**从进程**）
+* 控制进程会永久监听TCP连接的21端口
+* **主动方式使用TCP20端口**（通常用于匿名传输），**被动方式由服务器和客户协商决定**
+
+![](/img/87m6n5b4v3cx.png)
+
+* **初始序号+1就是数据部分的初始序号**，因为建立TCP连接的握手①消耗一个序号，握手③才可以开始携带数据
+
+* 在拥塞避免算法前（到达拥塞阈值前），每一个ack都会导致拥塞窗口的值+1（单位MSS）
+* **拥塞窗口一旦大于阈值，那么在1个RTT内，无论连续收到多少个ack，拥塞窗口最多只能+1**
+
+![](/img/m87654e.png)
+
+* 什么时候可能出现冗余ack？
+
+  * ①第一个TCP报文段丢失
+  * 此时来到拥塞控制的另一种策略
+    * **连续收到三个重复的冗余ack（4个相同的ack），就要执行快重传算法**，即把**阈值和拥塞窗口设置为当前拥塞窗口的一半（计算机内部一般向下取整）**
+    * 只有4个重复ack才能出现3个冗余ack，因为第一个ack不是冗余的，是正常的
+
+  ![](/img/193723.jpg)
+
+* **超时慢开始，冗余ack快重传**
+
+#### 2
+
+![](/img/m867n6b5evtrew.png)
+
+![](/img/m87n655.png)
+
+* 直通交换方式：交换机需要把开头的6个字节（目的MAC地址）先接收下来，然后才能根据目的MAC地址确认这个数据帧从哪个接口转发出去
+  * 转发时延低，固定等于**6B/交换机的传输速率**
+* 存储转发方式：交换机先把整个MAC帧全部接收到交换机内部的高速缓存里面，完整接收下来之后再决定这个帧应该从哪个接口转发出去
+  * 转发时延高，等于**帧总长（6+6+2+N+4）/交换机传输速率**
+
+![](/img/98,7mn76byhtvrge.png)
+
+![](/img/.09,8m7n6b5v54.png)
+
+* 在一段链路当中，**数据的传输速率上限取决于这段链路中最低的传输速率**
+
+![](/img/9,8m7n6b5.png)
+
+#### 3
+
+![](/img/m867n6b5evtrew.png)
+
+* **TCP里面ack以B字节为单位**，而**数据链路层中数据帧的确认以帧为单位**
+* 注意区分帧的序号和发送窗口接收窗口的区别，帧的需要用3bit那就是0-7，但是接收窗口和发送窗口一共等于8
+* 分析思路：先把某一方的发送窗口或者接收窗口写出来，根据时序图判断分析的这个结点之前已经发出的是哪几个帧，已经发送的标注出来，然后在发送的中间观察已经被ack确认接收的是哪几个，**已经确认的右边边界砍一刀，这个就是发送窗口的起点位置**
+
+#### 4
+
+![](/img/terbnmtrhgf.png)
+
+![](/img/cv6uk.png)
+
+* 分析RIP构建路由表的时候，可以先画初始向量，然后再画交换距离向量后各个路由器新增的表项
+
+![](/img/m87tnb.png)
+
+* 用邻接表记录自己周围的拓扑结构的信息，然后把自己相连的节点的信息，用洪泛法通知自己的邻居自己的拓扑结构
+
+![](/img/ervtb.png)
+
+* **同一个自治系统内**路由器之间的转发**并不会增加AS跳数**
+
+![](/img/frdst.png)
 
 # 一点录音
 
