--- a/source/_posts/操作系统.md
+++ b/source/_posts/操作系统.md
@@ -208,6 +208,13 @@ math: true
 
 ![](/img/005648.jpg)
 
+##### 中断和异常处理中，操作系统所做的工作
+
+* 编写中断服务程序
+* 设置中断向量表
+* 保存通用寄存器的值（保存现场）
+* 执行中断服务程序
+
 #### 1.3.3 系统调用
 
 ##### 什么是系统调用，有何作用
