--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -718,63 +718,71 @@ math: true
 
 ## 6.4
 
-![](F:\try\home\themes\fluid\source\img\63c75150-3ab0-4951-bcb7-135bd449e935.png)
+![](/img/63c75150-3ab0-4951-bcb7-135bd449e935.png)
 
-![](F:\try\home\themes\fluid\source\img\509AA298ED0E44707472F52573E12B72.jpg)
+![](/img/509AA298ED0E44707472F52573E12B72.jpg)
 
 错题：
 
-* 
+* 2
+  * 给出的PC值是取指之前的
+* 传递参数其实就是压栈保存
 
 ## 6.5
 
-![](F:\try\home\themes\fluid\source\img\373a6865-2514-4cad-9d11-bfe26097dcf0.png)
+![](/img/373a6865-2514-4cad-9d11-bfe26097dcf0.png)
 
-![](F:\try\home\themes\fluid\source\img\fc33d09a-9cbe-42e6-8c29-9e16c910eb02.png)
+![](/img/fc33d09a-9cbe-42e6-8c29-9e16c910eb02.png)
 
 错题：
 
-* 
+* 2
+  * 实际计算机中栈是往低地址延伸，也就是说当栈顶增加的时候，实际上是内存减少，高地址是栈底，低地址是栈顶
 
 ## 6.6
 
-![](F:\try\home\themes\fluid\source\img\0c89e36c-cf89-4ab5-85f5-9e28f5aa8cc5.png)
+![](/img/0c89e36c-cf89-4ab5-85f5-9e28f5aa8cc5.png)
 
-![](F:\try\home\themes\fluid\source\img\d4a04996-5777-4d32-83a5-fca5b480076d.png)
+![](/img/d4a04996-5777-4d32-83a5-fca5b480076d.png)
 
 错题：
 
-* 
+* 无
 
 ## 6.7
 
-![](F:\try\home\themes\fluid\source\img\e24f7b8d-89bc-4719-956a-6125d73814fa.png)
+![](/img/e24f7b8d-89bc-4719-956a-6125d73814fa.png)
 
-![](F:\try\home\themes\fluid\source\img\94b9aed6-0870-4951-bcff-998b61b72212.png)
+![](/img/94b9aed6-0870-4951-bcff-998b61b72212.png)
 
 错题：
 
-* 
+* 无
 
 ## 6.8
 
-![](F:\try\home\themes\fluid\source\img\7d0fb16d-ae90-4edf-8757-5c4e2d57b26b.jpeg)
+![](/img/7d0fb16d-ae90-4edf-8757-5c4e2d57b26b.jpeg)
 
-![](F:\try\home\themes\fluid\source\img\3b5c9dda-52a1-4da2-a013-4a28df824441.jpeg)
+![](/img/3b5c9dda-52a1-4da2-a013-4a28df824441.jpeg)
 
 错题：
 
-* 
+* 2
+  * RISC有乘除和浮点数运算指令
+  * RISC从CISC中选取了使用频率高的简单指令，以及很有用且不复杂的指令
+* 3
+  * 编写中断服务程序也是操作系统所做
 
 ## 6.9
 
-![](F:\try\home\themes\fluid\source\img\0815985a-17a1-49b4-8cb2-c17e539e8836.jpeg)
+![](/img/0815985a-17a1-49b4-8cb2-c17e539e8836.jpeg)
 
-![](F:\try\home\themes\fluid\source\img\9629848a-ed2e-4d38-a20d-20d27dde9543.png)
+![](/img/9629848a-ed2e-4d38-a20d-20d27dde9543.png)
 
 错题：
 
-* 
+* 1
+  * 冒泡排序上帝视角排序正确以后机器还需要再进行一轮冒泡排序检查是否排序正确
 
 ## 6.10
 
