--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -3384,6 +3384,8 @@ intel x86架构cpu
 * 向量地址指向中断向量的存储地址，中断向量指向中断服务程序的起始地址
   * 中断向量相当于函数的指针，向量地址是指针的指针
 
+![](/img/94b9aed6-0870-4951-bcff-998b61b72212(1).png)
+
 ![](/img/210340.jpg)
 
 ![](/img\210447.jpg)
