--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -936,11 +936,14 @@ index_img: /img/1920x1080 (37).jpg
     * 要修改PC值的基本都是这种寻址方式，尤其是转移类指令
   * 变址寻址
     * 数组问题（起始地址+偏移量）
-
 * 隐含寻址：一条指令的操作数由硬件直接找到，并没有在指令中明确指出操作数在哪个地方
   * 如return指令
   * 根据这个指令的规则，由硬件自动去找到要找的操作数
-
+* 间接寻址方便子程序返回的原因
+  * 如果没有间接寻址，返回地址就得写死在某个固定位置或者寄存器里，那就**每次只能调用一次**，不能嵌套调用、递归、重入，而**间接寻址 + 栈**就可以灵活处理这种情况：
+    * 子程序每次调用都把返回地址压栈；
+    * 返回时用间接寻址从栈中“取出”地址并跳转。
+  * **间接寻址方便子程序返回，是因为它允许程序灵活地通过地址（比如栈指针）去间接找到“返回地址”，从而实现子程序嵌套调用和正确返回。**
 * 数据的对齐和大/小端存放方式
   * 数据的对齐
     * 按边界对齐
@@ -1566,13 +1569,19 @@ index_img: /img/1920x1080 (37).jpg
 
 * 中断响应（也是中断隐指令的工作，硬件完成）：
   * 保护断点和程序状态
+    
     * 保存PC和PSW（断点）
   * 识别中断事件
     * 软件识别
+      
       * 核心思想是操作系统是一个统一的异常处理程序，用程序来完成的，识别出异常事件。
     * 硬件识别
       * 向量中断方式
+      
+        ![](/img/94b9aed6-0870-4951-bcff-998b61b72212(1).png)
+      
       * 用专门的硬件查询电路识别，得到一个中断类型号，然后根据这个中断类型号到中断向量表里面读取相应的中断服务程序的入口地址（中断向量）
+        
         * 硬件：PIC（可编程中断控制器）
   * 切换到具体的中断处理程序执行
 * 关中断：将中断允许标志（在PSW里面）清零，表示关中断（首先要做的基本操作）
