--- a/source/_posts/数据结构.md
+++ b/source/_posts/数据结构.md
@@ -7941,6 +7941,8 @@ void merge_sort(int q[], int l, int r)
 
 ![](/img/11820.jpg)
 
+* 败者树的空间复杂度是O(n)，时间复杂度是O(nlogn)
+
 ##### 败者树的使用
 
 ![](/img/12214.jpg)
