--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -576,7 +576,7 @@ math: true
 
 * 无
 
-## 5.23
+## 5.23 红黑树和存储系统
 
 ![](/img/fa914287-7b7e-42b0-8cd4-dc3edf52b13f.png)
 
@@ -587,7 +587,7 @@ math: true
 * 1
   * 红黑树的黑高是指从该点（不包含该点）出发到叶子节点的路径上黑色节点的数量
 
-## 5.24
+## 5.24 红黑树和存储系统
 
 ![](/img/23397c84-51db-4f04-b701-b600fb1af6fd.png)
 
@@ -599,7 +599,7 @@ math: true
 
 * 无
 
-## 5.25
+## 5.25 B树和存储系统
 
 ![](/img/cec497f3-bdaf-487d-936d-393a078c47b9.png)
 
@@ -609,7 +609,7 @@ math: true
 
 * 无
 
-## 5.26
+## 5.26 B树和存储系统
 
 ![](/img/0516fca0-d653-47f1-b0b2-3e55dec25729.png)
 
@@ -622,7 +622,7 @@ math: true
 * 2
   * 以cache块为单位
 
-## 5.27
+## 5.27 B树和存储系统
 
 ![](/img/4b85d02a-8b03-43ee-bfe1-96447e4bab04.png)
 
@@ -635,7 +635,7 @@ math: true
 * 2
   * Cache行数所占位数=log2（Cache容量/Cache块大小）
 
-## 5.28
+## 5.28 B树和存储系统
 
 ![](/img/b101e514-c84f-4c28-a3ba-b30f45b546e6.png)
 
@@ -646,7 +646,7 @@ math: true
 * 无
 * 注意多路选择器和比较器的区别，比较器用来判断标记是否匹配，多路选择器用来输出最后结果
 
-## 5.29
+## 5.29 B树和存储系统
 
 ![](/img/cd03158f-68a3-4c8d-867a-29d7c920e3d0.png)
 
@@ -658,7 +658,7 @@ math: true
 * 2
   * 注意这里的主存命中率是指cache未命中的时候的主存命中率
 
-## 5.30
+## 5.30 B树和存储系统
 
 ![](/img/add0a8f2-a83a-4f5c-b2e9-adcafd7276fd.png)
 
@@ -669,7 +669,7 @@ math: true
 * 1
   * 兄弟不够借，和双亲合并是指双亲关键字拉下来
 
-## 5.31
+## 5.31 B树和B+树和存储系统
 
 ![](/img/8d3a33e2-f1bd-499a-a367-83d800cb749b.png)
 
@@ -679,7 +679,7 @@ math: true
 
 * 无
 
-## 6.1
+## 6.1 排序和存储系统和操作系统概述
 
 ![](/img/da33847f-66b5-4c2d-bf82-a6dd982d0618.jpeg)
 
@@ -694,7 +694,7 @@ math: true
 * 3
   * 作业调度是指从外存到内存，内存调度是指挂起的重新放入内存，进程调度是指分配cpu
 
-## 6.2
+## 6.2 排序和存储系统和操作系统概述
 
 ![](/img/44e37fc5-04f3-4583-aa3f-8b6176c2cbbd.jpeg)
 
@@ -705,7 +705,7 @@ math: true
 * 1
   * 探测次数是指用到线性探测法，不是查找失败的次数。
 
-## 6.3
+## 6.3 排序和存储系统和操作系统概述
 
 ![](/img/58b14ae4-b636-47e4-af9a-2032d013cb2f.png)
 
@@ -716,7 +716,7 @@ math: true
 * 1
   * 因为是mod 7 ，所以查找失败的映射范围是0~6一共7个数，所以只用探测0~6的映射情况，然后分母为7
 
-## 6.4
+## 6.4 排序和指令系统和操作系统概述
 
 ![](/img/63c75150-3ab0-4951-bcb7-135bd449e935.png)
 
@@ -728,7 +728,7 @@ math: true
   * 给出的PC值是取指之前的
 * 传递参数其实就是压栈保存
 
-## 6.5
+## 6.5 排序和指令系统和操作系统概述
 
 ![](/img/373a6865-2514-4cad-9d11-bfe26097dcf0.png)
 
@@ -739,7 +739,7 @@ math: true
 * 2
   * 实际计算机中栈是往低地址延伸，也就是说当栈顶增加的时候，实际上是内存减少，高地址是栈底，低地址是栈顶
 
-## 6.6
+## 6.6 排序和指令系统和操作系统概述
 
 ![](/img/0c89e36c-cf89-4ab5-85f5-9e28f5aa8cc5.png)
 
@@ -749,7 +749,7 @@ math: true
 
 * 无
 
-## 6.7
+## 6.7 排序和指令系统和操作系统概述
 
 ![](/img/e24f7b8d-89bc-4719-956a-6125d73814fa.png)
 
@@ -759,7 +759,7 @@ math: true
 
 * 无
 
-## 6.8
+## 6.8 排序和指令系统和操作系统概述
 
 ![](/img/7d0fb16d-ae90-4edf-8757-5c4e2d57b26b.jpeg)
 
@@ -773,7 +773,7 @@ math: true
 * 3
   * 编写中断服务程序也是操作系统所做
 
-## 6.9
+## 6.9 排序和指令系统和操作系统概述
 
 ![](/img/0815985a-17a1-49b4-8cb2-c17e539e8836.jpeg)
 
@@ -784,155 +784,174 @@ math: true
 * 1
   * 冒泡排序上帝视角排序正确以后机器还需要再进行一轮冒泡排序检查是否排序正确
 
-## 6.10
+## 6.10 排序和CPU和操作系统概述
 
-![](F:\try\home\themes\fluid\source\img\15835ef7-f4e1-4a92-afd2-876374c0a393.png)
+![](/img/15835ef7-f4e1-4a92-afd2-876374c0a393.png)
 
-![](F:\try\home\themes\fluid\source\img\c8dd4a5b-cb1c-4173-ab26-25500db3fe80.png)
-
-错题：
-
-* 
-
-## 6.11
-
-![](F:\try\home\themes\fluid\source\img\35024f90-e8ac-465d-91b2-975bd407d40a.png)
-
-![](F:\try\home\themes\fluid\source\img\7a7ebf82-d1b2-494a-aec3-b22a9292a877.png)
+![](/img/c8dd4a5b-cb1c-4173-ab26-25500db3fe80.png)
 
 错题：
 
-* 
+* 1
+  * 快排会交换位置
+* 2
+  * ![](/img/003837.jpg)
 
-## 6.12
+## 6.11 排序和指令系统和内存管理
 
-![](F:\try\home\themes\fluid\source\img\1c169ce8-8ef1-46a5-a498-b89875f37823.png)
+![](/img/35024f90-e8ac-465d-91b2-975bd407d40a.png)
 
-![](F:\try\home\themes\fluid\source\img\4f7d11ff-62fb-48da-8a00-b4b6a6d4e215.png)
-
-错题：
-
-* 
-
-## 6.13
-
-![](F:\try\home\themes\fluid\source\img\14c510c9-2113-45ad-9ed7-db9ec36548a9.png)
-
-![](F:\try\home\themes\fluid\source\img\6359388a-603a-47d3-894b-84757620f8ed.png)
+![](/img/7a7ebf82-d1b2-494a-aec3-b22a9292a877.png)
 
 错题：
 
-* 
+* 3
+  * 进程切换的时候需要保存现场即通用寄存器的值
 
-## 6.14
+## 6.12 排序和CPU和进程线程
 
-![](F:\try\home\themes\fluid\source\img\8c78bcc4-a5ff-4d97-8d97-7de7cc361ec5.png)
+![](/img/1c169ce8-8ef1-46a5-a498-b89875f37823.png)
 
-![](F:\try\home\themes\fluid\source\img\afccdad7-3988-4e09-bc14-402f2217fa80.png)
-
-错题：
-
-* 
-
-## 6.15
-
-![](F:\try\home\themes\fluid\source\img\660a1efe-3f89-4e41-8cfd-1c68506f60fe.png)
-
-![](F:\try\home\themes\fluid\source\img\f9591299-e3ce-4255-858f-ae9b4a95e698.png)
+![](/img/4f7d11ff-62fb-48da-8a00-b4b6a6d4e215.png)
 
 错题：
 
-* 
+* 无
 
-## 6.16
+## 6.13 排序和CPU和进程线程
 
-![](F:\try\home\themes\fluid\source\img\04684959-5c46-4b18-b269-13f45031bfbe.png)
+![](/img/14c510c9-2113-45ad-9ed7-db9ec36548a9.png)
 
-![](F:\try\home\themes\fluid\source\img\b89f279c-4982-4ed6-bc59-49f5a5e19509.png)
-
-错题：
-
-* 
-
-## 6.17
-
-![](F:\try\home\themes\fluid\source\img\de554552-8fcc-422e-aa32-4e39c437983d.png)
-
-![](F:\try\home\themes\fluid\source\img\dfd53d69-8c96-467e-908c-9ec1ebfa78c8.png)
+![](/img/6359388a-603a-47d3-894b-84757620f8ed.png)
 
 错题：
 
-* 
+* 无
 
-## 6.18
+## 6.14 排序和指令流水线和进程线程
 
-![](F:\try\home\themes\fluid\source\img\010e123e-17cc-47cc-8813-2d0e7236b1d8.png)
+![](/img/8c78bcc4-a5ff-4d97-8d97-7de7cc361ec5.png)
 
-![](F:\try\home\themes\fluid\source\img\863a16c4-e324-4f63-ac19-cbc7d157a566.png)
-
-错题：
-
-* 
-
-## 6.19
-
-![](F:\try\home\themes\fluid\source\img\349a674e-54f8-4c42-b39f-eb8eabd6647e.png)
-
-![](F:\try\home\themes\fluid\source\img\1f664c6b-b1a6-4182-b1fe-5b8496788144.png)
+![](/img/afccdad7-3988-4e09-bc14-402f2217fa80.png)
 
 错题：
 
-* 
+* 无
 
-## 6.20
+## 6.15 外部排序和CPU和进程线程
 
-![](F:\try\home\themes\fluid\source\img\e0764b4e-d8f5-4383-9a97-4ca33536480c.png)
+![](/img/660a1efe-3f89-4e41-8cfd-1c68506f60fe.png)
 
-![](F:\try\home\themes\fluid\source\img\e7e8e350-8787-4dca-bf45-4bd2d324dfee.png)
-
-错题：
-
-* 
-
-## 6.21
-
-![](F:\try\home\themes\fluid\source\img\24225f72-24f5-4f32-9c51-e85a855acfda.png)
-
-![](F:\try\home\themes\fluid\source\img\349f86ea-11ae-4be3-8287-455bea4641c2.jpeg)
+![](/img/f9591299-e3ce-4255-858f-ae9b4a95e698.png)
 
 错题：
 
-* 
+* 无
 
-## 6.22
+## 6.16 排序和指令流水线和进程线程
 
-![](F:\try\home\themes\fluid\source\img\8a5abd83-377e-4621-b198-3f56bbe04f75.png)
+![](/img/04684959-5c46-4b18-b269-13f45031bfbe.png)
 
-![](F:\try\home\themes\fluid\source\img\Cache_-248a4a6132183be9.png)
+![](/img/b89f279c-4982-4ed6-bc59-49f5a5e19509.png)
 
 错题：
 
-* 
+* 3
+  * 自旋锁是一直请求锁，具有随机性
+
+## 6.17 外部排序和指令流水线和进程线程
+
+![](/img/de554552-8fcc-422e-aa32-4e39c437983d.png)
+
+![](/img/dfd53d69-8c96-467e-908c-9ec1ebfa78c8.png)
+
+错题：
+
+* 2
+  * **普通数据冒险采用旁路转发技术不需要阻塞，而load-use需要阻塞一个时钟周期的根本原因是所需数据产生的阶段不同，使用ALU计算获得结果（所需数据）的在EX阶段可以产生所需数据，而load指令在M阶段从内存中获取所需数据**
+
+## 6.18 外部排序和多处理器的基本概念和进程线程
+
+![](/img/010e123e-17cc-47cc-8813-2d0e7236b1d8.png)
+
+![](/img/863a16c4-e324-4f63-ac19-cbc7d157a566.png)
+
+错题：
+
+* 1
+  * 败者树中非叶子节点存储的是失败者的标记（归并段下标），而叶子节点存储的是各个路当前记录的索引值
+
+## 6.19 外部排序和总线和进程线程
+
+![](/img/349a674e-54f8-4c42-b39f-eb8eabd6647e.png)
+
+![](/img/1f664c6b-b1a6-4182-b1fe-5b8496788144.png)
+
+错题：
+
+* 3
+  * 注意题目所说的是内核线程
+
+## 6.20 外部排序和I/O和进程线程
+
+![](/img/e0764b4e-d8f5-4383-9a97-4ca33536480c.png)
+
+![](/img/e7e8e350-8787-4dca-bf45-4bd2d324dfee.png)
+
+错题：
+
+* 无
+
+## 6.21排序和I/O和进程线程
+
+![](/img/24225f72-24f5-4f32-9c51-e85a855acfda.png)
+
+![](/img/349f86ea-11ae-4be3-8287-455bea4641c2.jpeg)
+
+错题：
+
+* 无
+
+## 6.22 外部排序和终端一场和进程线程
+
+![](/img/8a5abd83-377e-4621-b198-3f56bbe04f75.png)
+
+![](/img/Cache_-248a4a6132183be9.png)
+
+错题：
+
+* 1
+  * 败者树为k路归并段内部排序所使用的，用于提高内部排序效率，与I/O次数无关
+* 3
+  * 每个选项都很精华
 
 ## 6.23
 
-![](F:\try\home\themes\fluid\source\img\15a6b2fe-ed85-4547-92b5-feee71ca3707.png)
+![](/img/15a6b2fe-ed85-4547-92b5-feee71ca3707.png)
 
-![](F:\try\home\themes\fluid\source\img\6499cbfe-b7b2-4163-848f-de6fe7363551.png)
+![](/img/6499cbfe-b7b2-4163-848f-de6fe7363551.png)
 
 错题：
 
-* 
+* 3
+  * **唤醒**因为I/O操作被阻塞的进程由**中断服务程序**完成。
+    * **阻塞**I/O操作进程由对应的**系统调用服务例程**完成
+    * 将数据**从设备控制器的寄存器送往内核缓冲区**由**中断服务程序**完成
+    * 将数据**从内核缓冲区送往用户缓冲区**由**系统调用服务程序**在唤醒后完成
+    * **初始化外设**的代码在**驱动程序**中
 
 ## 6.24
 
-![](F:\try\home\themes\fluid\source\img\242fd038-b3df-4ce3-8835-7c0df92d5ed1.png)
+![](/img/242fd038-b3df-4ce3-8835-7c0df92d5ed1.png)
 
-![](F:\try\home\themes\fluid\source\img\md2card-1750735950162-1.png)
+![](/img/md2card-1750735950162-1.png)
 
 错题：
 
-* 
+* 1
+  * 数据元素是指{1，2，3}{1}这些单个的值，数据对象是多个字段或者数据元素的集合
+* 2
+  * DMA进行数据传送之前，CPU先执行一段初始化程序，完成对DMA控制器中各参数寄存器的初始值的设定，因此**通过软件完成对DMA控制器中各参数寄存器的初始值的设定**
 
 ## 6.25
 
