--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -2548,7 +2548,7 @@ intel x86架构cpu
 ![](/img/005641.jpg)
 
 * 微地址形成部件：外部的一条机器指令被取到IR当中，不同的机器指令所对应的微指令序列，即所对应的微程序不一样，因此需要根据该机器指令的操作码来确定其所对应的微程序的起始地址
-  * 功能：根据机器指令的操作码来确定这个机器指令对应的微指令序列的一个首地址
+  * 功能：根据机器**指令的操作码**来确定这个机器指令对应的微指令序列的一个首地址
 * 当CPU取到一条指令之后，执行指令的过程：
   * 首先把指令的操作码送给微地址形成部件，用来确定这条指令所对应的微指令序列的一个起始地址
   * 再根据顺序逻辑的标志信息来确定接下来我们要执行的这条微指令的存放地址，把微指令地址放到CMAR当中
