--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -1423,7 +1423,7 @@ index_img: /img/1920x1080 (37).jpg
 * 任何一条指令对寄存器的写操作都一定是在WB这一段
 * 任何一条指令对寄存器的读操作一定是在ID这一段
 * 会写寄存器的只有load指令和运算类指令，而且一定是在第五个段WB这个段
-* 如果前一条指令写了某个寄存器，而后一条指令在前一条指令还没协会之前，就去尝试读同一个寄存器的值，那么就会发生数据冒险
+* 如果前一条指令写了某个寄存器，而后一条指令在前一条指令还没写回之前，就去尝试读同一个寄存器的值，那么就会发生数据冒险
   * 因此在分析题目的时候，需要注意观察load指令和运算类指令有没有写某一个寄存器
   * 如果发现了这种情况，那么接下来就需要观察这两类指令的后面几条指令有没有去读同一个寄存器，如果有的话，就有可能发生数据冒险
 * 所有的指令当中，只有转移类的指令有可能会更改PC值，而改变PC值在转移类指令的第四个阶段即访存阶段
@@ -1512,6 +1512,19 @@ index_img: /img/1920x1080 (37).jpg
     * 而load指令读数据是在M访存阶段完成的，然后在WB段会把从内存里面读出来的这些数据写回寄存器。因此I2这条指令要M访存阶段结束后才可以从内存里面获得最终的这个数据，然后WB这个段再把数据写回R[s3]，后一条指令I3需要在EX阶段使用load指令读出来的这个数据，因此这个EX段必须安排在I2的M段之后，所以我们不得不让EX段阻塞一个时钟，等到阻塞一个时钟之后才能使用转发技术，在I2的M段把数据转发给I3的EX段
 
 ![](/img/dsfawe.png)
+
+#### 补充旁路转发和load-use
+
+![](/img/202405222222529.png)
+
+* load指令**在第四周期即M访存阶段结束时**，数据在流水段寄存器中已经有值，在此时可以采用数据转发技术可以使load指令后面第二条指令得到所需的指，但不能解决load指令和随后的第一条指令之间的数据冒险，**要延迟执行一条指令**
+
+![](/img/202405222232608.png)
+
+![](/img/202405222234220.png)
+
+* **普通数据冒险采用旁路转发技术不需要阻塞，而load-use需要阻塞一个时钟周期的根本原因是所需数据产生的阶段不同，使用ALU计算获得结果（所需数据）的在EX阶段可以产生所需数据，而load指令在M阶段从内存中获取所需数据**
+  * load指令中的ID和EX是在获取所需数据的内存地址，M访存获得所需数据
 
 ### 控制冒险的分析和处理
 
