--- a/source/_posts/408错漏知识.md
+++ b/source/_posts/408错漏知识.md
@@ -20,6 +20,12 @@ math: true
 * 败者树的空间复杂度是O(n)，时间复杂度是O(nlogn)
 * 败者树为k路归并段内部排序所使用的，用于提高内部排序效率，与I/O次数无关
 
+### 链表
+
+* 单链表中删除一个节点有两种方法
+  * 1、将该点直接删除，让该点的上一个节点直接指向该点的下一个节点
+  * 2、将该点变成该点的下一个点
+
 ## CO（计组）
 
 ### 指令系统
@@ -124,6 +130,25 @@ math: true
 ### 内存管理
 
 ![](/img/md2card-1750735950162-1(1).png)
+
+#### 虚拟存储管理
+
+* 页式存储管理方式的虚拟地址空间维度是一维的
+
+  * 段式存储管理方式的虚拟地址空间是二维的
+  * 段页式存储管理方式的虚拟地址空间是二维的
+
+  ![](/img/215613.jpg)
+
+* 页式存储管理中每个进程有一个页表
+
+* 段式存储管理中每个进程都有一个段表
+
+* 段页式存储管理中，每个进程都有一个段表，每个进程的每个段都有一个页表
+
+#### 内存映射文件
+
+![](/img/221511.jpg)
 
 ## CN（计网）
 
