--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -924,8 +924,9 @@ math: true
   * 败者树为k路归并段内部排序所使用的，用于提高内部排序效率，与I/O次数无关
 * 3
   * 每个选项都很精华
+  * 选项解释说正在访问操作系统内核临界区中不应该被剥夺处理机资源，是因为“取出准备挂到就绪队列”，说明还在处理中，如果挂到就绪队列上了，可能因为优先级引起进程调度程序执行
 
-## 6.23
+## 6.23 时间复杂度和中断异常和进程线程
 
 ![](/img/15a6b2fe-ed85-4547-92b5-feee71ca3707.png)
 
@@ -940,7 +941,7 @@ math: true
     * 将数据**从内核缓冲区送往用户缓冲区**由**系统调用服务程序**在唤醒后完成
     * **初始化外设**的代码在**驱动程序**中
 
-## 6.24
+## 6.24 数据结构的基本概念和I/O方式和内存管理
 
 ![](/img/242fd038-b3df-4ce3-8835-7c0df92d5ed1.png)
 
@@ -953,35 +954,50 @@ math: true
 * 2
   * DMA进行数据传送之前，CPU先执行一段初始化程序，完成对DMA控制器中各参数寄存器的初始值的设定，因此**通过软件完成对DMA控制器中各参数寄存器的初始值的设定**
 
-## 6.25
+## 6.25 单链表和I/O方式和内存管理
 
-![](F:\try\home\themes\fluid\source\img\e3209fb8-ece3-474c-9f41-3ba57c392101.png)
+![](/img/e3209fb8-ece3-474c-9f41-3ba57c392101.png)
 
-![](F:\try\home\themes\fluid\source\img\752b73e5-6c27-4950-a9a9-0fac30cf58e0.png)
-
-错题：
-
-* 
-
-## 6.26
-
-![](F:\try\home\themes\fluid\source\img\08b11987-b866-4631-82e0-e4c0d30585f9.jpeg)
-
-![](F:\try\home\themes\fluid\source\img\aa5c5bc0-39a3-494c-93f5-1c14325eca61.jpeg)
+![](/img/752b73e5-6c27-4950-a9a9-0fac30cf58e0.png)
 
 错题：
 
-* 
+* 3
 
-## 6.27
+  ![](/img/215613.jpg)
 
-![](F:\try\home\themes\fluid\source\img\5a7495e3-d687-454c-bd6a-20708dda88b7.jpeg)
+## 6.26 平衡二叉树和数据的表示和内存管理
 
-![](F:\try\home\themes\fluid\source\img\69bda588-cb1e-430a-a3d0-9ea053120220.jpeg)
+![](/img/08b11987-b866-4631-82e0-e4c0d30585f9.jpeg)
+
+![](/img/aa5c5bc0-39a3-494c-93f5-1c14325eca61.jpeg)
 
 错题：
 
-* 
+* 第一题答案写错，选C，正确
+
+* 2
+  * 负数是绝对值越小越大
+* 3
+  * 页式存储管理中每个进程有一个页表
+  * 段式存储管理中每个进程都有一个段表
+  * 段页式存储管理中，每个进程都有一个段表，每个进程的每个段都有一个页表
+
+## 6.27 图和数据的表示和内存管理
+
+![](/img/5a7495e3-d687-454c-bd6a-20708dda88b7.jpeg)
+
+![](/img/69bda588-cb1e-430a-a3d0-9ea053120220.jpeg)
+
+错题：
+
+* 1
+
+  * 生成树的定义是，包含所有顶点的极小连通子图
+
+* 3
+
+  ![](/img/221511.jpg)
 
 ## 6.28
 
